docs(core) add FFM support documentation